# bing-dict-telegram-bot

./: Cargo.toml  README.md
src/: bot.rs  config.rs  main.rs
src/handler/: command.rs  inline_query.rs  message.rs  mod.rs
